# nyan-ext-translate

./: README.md  pyproject.toml
nyan_ext_translate/: __init__.py  translate.py
