[tool.poetry]
name = "nyan-ext-translate"
version = "0.2.0"
description = ""
authors = ["sserve-kr <personal@sserve.me>"]
readme = "README.md"
packages = [{include = "nyan_ext_translate"}]

[tool.poetry.dependencies]
python = "^3.10"
nyanlang = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
